# stonks

./: README.md  pyproject.toml
stonks/: app.py  config.py  security.py
stonks/dashboard/: route.py
stonks/user/: form.py  model.py  route.py
templates/: base.html
templates/auth/: signin.html  signup.html
templates/dashboard/: index.html
